--- a/birdwatcher-website.conf
+++ b/birdwatcher-website.conf
@@ -14,14 +14,22 @@
 		Require all granted
 	</Directory>
 
+	# forward all request to localhost:8080/birdimages to /etc/birdimages
+	Alias /birdimages "/etc/birdimages/"
+	<Directory "/etc/birdimages/">
+		Require all granted
+	</Directory>
+
+
+
 	# Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
 	# error, crit, alert, emerg.
 	# It is also possible to configure the loglevel for particular
 	# modules, e.g.
 	#LogLevel info ssl:warn
 
-	ErrorLog ${APACHE_LOG_DIR}/error.log
-	CustomLog ${APACHE_LOG_DIR}/access.log combined
+	ErrorLog /etc/error.log
+	CustomLog /etc/access.log combined
 
 	# For most configuration files from conf-available/, which are
 	# enabled or disabled at a global level, it is possible to
